--- a/newsexo/assets/css/theme-default.css
+++ b/newsexo/assets/css/theme-default.css
@@ -507,6 +507,9 @@ input[type="submit"]:focus {
 .footer-sidebar .widget .wp-block-embed .wp-element-caption a {
 	color: #0e98d6;
 } 
+.footer-sidebar .widget #searchform.input-group .btn {
+    background-color: #0e98d6;
+}
 
 
 /*--------------------------------------------------------------
