--- a/newsexo/assets/css/theme-default.css
+++ b/newsexo/assets/css/theme-default.css
@@ -510,6 +510,9 @@ input[type="submit"]:focus {
 .footer-sidebar .widget #searchform.input-group .btn {
     background-color: #0e98d6;
 }
+.footer-sidebar .widget .wp-block-file .wp-block-file__button {
+    background-color: #0e98d6;
+}
 
 
 /*--------------------------------------------------------------
