--- a/newsexo/assets/css/theme-default.css
+++ b/newsexo/assets/css/theme-default.css
@@ -470,6 +470,9 @@ input[type="submit"]:focus {
 .sidebar .widget .wp-block-file .wp-block-file__button {
     background-color: #0e98d6;
 }
+.sidebar .widget .wp-block-media-text .wp-block-media-text__content a {
+	color: #0e98d6;
+} 
 
 
 /*--------------------------------------------------------------
