--- a/newsexo/assets/css/theme-default.css
+++ b/newsexo/assets/css/theme-default.css
@@ -466,6 +466,12 @@ input[type="submit"]:focus {
     color: #0e98d6;
     text-decoration-color: #0e98d6;
 }
+/*wp block read more*/
+.wp-block-read-more, 
+.wp-block-read-more:hover, 
+.wp-block-read-more:focus {
+	color: #0e98d6;
+}
 /*Sidebar Update Released*/
 .sidebar .widget .wp-block-file .wp-block-file__button {
     background-color: #0e98d6;
