--- a/newsexo/assets/css/theme-default.css
+++ b/newsexo/assets/css/theme-default.css
@@ -485,6 +485,9 @@ input[type="submit"]:focus {
 .sidebar .widget .wp-block-media-text .wp-block-media-text__content a {
 	color: #0e98d6;
 } 
+.sidebar .widget .wp-block-embed .wp-element-caption a {
+	color: #0e98d6;
+} 
 
 
 /*--------------------------------------------------------------
